# cashier-app

./: package.json  vite.config.js
.github/workflows/: build.yml
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  logger.rs  main.rs
src-tauri/src/modules/: mod.rs  serial_server.rs  ws_server.rs
src/component/: empty.jsx
src/component/exception/: 403.jsx  404.jsx  500.jsx
src/component/layout/: basic.css  basic.jsx
src/config/: routers.jsx
src/hooks/: index.js  userMenuRouter.jsx
src/pages/auth/: login.jsx  register.jsx
src/pages/home/: index.jsx
src/pages/setting/printer/: index.jsx
src/pages/setting/serial/: index.jsx
src/pages/setting/websocket/: index.jsx
